# relex-tv-program

./: Main.hs  README.md  stack.yaml  tv-program.cabal
TV/: Channel.hs  Hour.hs  Minute.hs  Program.hs  Timeslot.hs  Week.hs
Temporary/: result.json  sample.json
