name:                tv-program
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/tv-program
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2019 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/tv-program.git

library
  build-depends: base == 4.*, containers, text, data-default-class, lens, xml-conduit, xml-lens
  exposed-modules: TV.Hour, TV.Minute, TV.Program
  default-language: Haskell2010
  ghc-options: -fno-warn-tabs
  default-extensions: LiberalTypeSynonyms, OverloadedStrings, TypeOperators, PackageImports, ViewPatterns

executable parse
  main-is: Main.hs
  build-depends: tv-program, base == 4.*, containers, text, data-default-class, lens, xml-conduit, xml-lens
  default-extensions: LiberalTypeSynonyms, OverloadedStrings, TypeOperators, PackageImports, ViewPatterns
  ghc-options: -fno-warn-tabs
